# Compiler

./: .gitignore  CMakeLists.txt  Compiler  README.md  TODO.todo  a.out  back.ipynb  backendtest.ipynb  build.sh  compiler  lex.yy.c  main.cpp  test  test.c  test.c.ll  test.ipynb  test.py
Backend/: BK_SelectionDAG.cpp
IR/Analysis/: Dominant.cpp  IDF.cpp  LoopInfo.cpp  SideEffect.cpp
IR/Opt/: CondMerge.cpp  ConstantFold.cpp  ConstantHoist.cpp  ConstantProp.cpp  DAE.cpp  DCE.cpp  DSE.cpp  DealOps.cpp  DealUndefOps.cpp  ECE.cpp  ExprReorder.cpp  GVN.cpp  GepCombine.cpp  GepEval.cpp  Global2Local.cpp  Inliner.cpp  Lcssa.cpp  Licm.cpp  LoopDel.cpp  LoopParing.cpp  LoopRoating.cpp  LoopRotaing.cpp  LoopRotate.cpp  LoopSimping.cpp  LoopSimplify.cpp  LoopUnrilling.cpp  LoopUnroll.cpp  LoopUnrolling.cpp  Mem2reg.cpp  MemoryToRegister.cpp  Men2reg.cpp  SOGE.cpp  SSAPRE.cpp  SSR.cpp  SelfStoreElimination.cpp  SimplifyCFG.cpp  SimplifyInst.cpp  TRE.cpp
MyBackend/: LiveInterval.cpp  MIR.cpp  PhiEliminate.cpp  ProloAndEpilo.cpp  RISCVContext.cpp  RISCVPrint.cpp  RISCVSelect.cpp  RISCVType.cpp  RegAllocation.cpp  RegisterVec.cpp  Translate.cpp
backend/: BackendDCE.cpp  BuildInFunctionTransform.cpp  FloatToDex.cpp  LegalizePass.cpp  Liveness.cpp  LowerFormalArguments.cpp  NewGraphDraw.cpp  PhiElimination.cpp  PostRACalleeSavedLegalizer.cpp  RISCVAsmPrinter.cpp  RISCVContext.cpp  RISCVFrameContext.cpp  RISCVISel.cpp  RISCVLowering.cpp  RISCVMIR.cpp  RISCVMOperand.cpp  RISCVRegister.cpp  RISCVTrival.cpp  RegAlloc.cpp  graphdraw.cpp
backendTest/: AutoTCM.py  test_all.py
include/: BK_DAG_Node.h
include/Backend/: BK_DAG_Node.h  BackEndPass.hpp  BackendDCE.hpp  BuildInFunctionTransform.hpp  FloatToDex.hpp  LegalizePass.hpp  Liveness.hpp  PhiElimination.hpp  PostRACalleeSavedLegalizer.hpp  RISCVAsmPrinter.hpp  RISCVContext.hpp  RISCVFrameContext.hpp  RISCVISel.hpp  RISCVLowering.hpp  RISCVMIR.hpp  RISCVMOperand.hpp  RISCVRegister.hpp  RISCVTrival.hpp  RISCVType.hpp  RegAlloc.hpp
lib/: AstNode.cpp  CFG.cpp  CoreClass.cpp  MyList.cpp  Trival.cpp
test/: a.out  dominat.cpp  test.c  test.s  test.txt
util/: my_stl.hpp
yacc/: ast.c  ast.h  lex.l  lex.yy.cpp  lex.yy.hpp  lrlex.l  lrparser.y  parser.cpp  parser.hpp  parser.y  parser_output.cpp  parser_output.hpp  scanner.cpp  scanner.hpp  scanner_output.cpp  scanner_output.hpp  sysy.l  sysy.y
(+85 files in other folders)
